# gsoc2012

./: .gitignore  CMakeLists.txt  COPYING  uncrustify.cfg
c-prototype/: Makefile  gnuplot_i.hpp  gsoc-c.cpp  gsoc2012_cprototype.sln  gsoc2012_cprototype.vcxproj  gsoc2012_cprototype.vcxproj.filters  octave-fft.m
c-prototype/fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
c-prototype/fftw_win32/: libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp
c-prototype/fftw_win64/: libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
cmake/Modules/: FindFFTW.cmake  FindGLEW.cmake  FindGLFW.cmake  FindOpenCL.cmake
includes/CL/: cl.hpp
libs/fftw/x64/: libfftw3-3.exp  libfftw3f-3.lib  libfftw3l-3.lib
libs/fftw/x86/: libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib
libs/glew/x86/: glew32mx.lib  glew32mxs.lib
opencl/: BasePlotter.h  BaseSimulator.h  CLSimulator.cpp  CLSimulator.h  CLWrapper.cpp  CLWrapper.h  CMakeLists.txt  CPUSimulator.cpp  CPUSimulator.h  Definitions.h  GnuPlotPlotter.cpp  GnuPlotPlotter.h  OpenGLPlotter.cpp  OpenGLPlotter.h  Plotter.cpp  Plotter.h  Simulator.cpp  Simulator.h  fftw3.h  fragmentShader.glsl  kernels.cl  main.cpp  openclUnitTests.cpp  stdafx.cpp  stdafx.h  util.cpp  util.h  utilShader.cpp  utilShader.h  vertexShader.glsl
opencl/CL/: cl.hpp
opencl/OpenCL_FFT/: clFFT.h  fft_base_kernels.h  fft_execute.cpp  fft_kernelstring.cpp  fft_setup.cpp
opencl/cpplog/: cpplog.hpp
opencl/fftw_win32/: libfftw3-3.exp  libfftw3-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
opencl/fftw_win64/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3l-3.exp
opencl/gnuplot_i/: gnuplot_i.cpp  gnuplot_i.h  gnuplot_i.hpp
opencl/gtest/include/gtest/: gtest.h
opencl/opencl_fft/: fft_execute.cpp  fft_internal.h  fft_kernelstring.cpp
src/: CMakeLists.txt
src/c-prototype/: gsoc-c.cpp  gsoc2012_cprototype.vcxproj
src/simulator/: BasePlotter.h  BaseSimulator.h  CLSimulator.cpp  CLSimulator.h  CLWrapper.cpp  CLWrapper.h  CMakeLists.txt  CPUSimulator.cpp  CPUSimulator.h  Definitions.h  GnuPlotPlotter.cpp  GnuPlotPlotter.h  OpenGLPlotter.cpp  OpenGLPlotter.h  fragmentShader.glsl  kernels.cl  main.cpp  main.h  openclUnitTests.cpp  stdafx.cpp  stdafx.h  util.cpp  util.h  utilShader.cpp  utilShader.h
